--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,24 +1,33 @@
 .header {
     background-color: #333;
     color: #fff;
-    padding: 4px 0;
+    padding: 2px;
 }
 
-nav ul {
+.nav div{
+    display: inline-flexbox;
+    list-style-type: none;
+    margin: 0;
+    padding: 15px;
+    text-align: start;
+
+}
+
+.nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     text-align: end;
 }
 
-nav li {
+.nav li {
     display: inline;
     margin: 0 15px;
     background-color: blue;
 }
 
 nav a {
-    text-decoration: none;
+    text-decoration:solid;
     color: #fff;
     font-weight: bold;
 }
