--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,33 +1,55 @@
 .header {
     background-color: #333;
     color: #fff;
-    padding: 2px;
-}
-
-.nav div{
-    display: inline-flexbox;
-    list-style-type: none;
-    margin: 0;
-    padding: 15px;
-    text-align: start;
-
-}
-
-.nav ul {
+    padding: 10px;
+  }
+  
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .nav-links ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    text-align: end;
-}
-
-.nav li {
-    display: inline;
-    margin: 0 15px;
+    display: flex;
+    gap: 20px;
+  }
+  
+  .nav-links li {
     background-color: blue;
-}
-
-nav a {
-    text-decoration:solid;
+    padding: 10px 15px;
+    border-radius: 5px;
+  }
+  
+  .nav-links a {
+    text-decoration: none;
     color: #fff;
     font-weight: bold;
-}
+  }
+  
+  @media screen and (max-width: 768px) {
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      background-color: #333;
+      width: 100%;
+    }
+  
+    .nav.active .nav-links {
+      display: flex;
+    }
+  
+    .nav-toggle {
+      display: block;
+      color: #fff;
+      font-size: 24px;
+      cursor: pointer;
+    }
+  }
+  
