--- a/src/Components/MoviesList/style.css
+++ b/src/Components/MoviesList/style.css
@@ -5,6 +5,15 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+.movieSearch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aqua;
+  height: 40px;
+
+}
+
 .movieList {
     display: inline-flex;
     align-items: center;
