--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -2,6 +2,10 @@
     background-color: #333;
     color: #fff;
     padding: 10px;
+    position: fixed;
+    top: 0px;
+    left: 0;
+    right: 0;
   }
   
   .nav {
@@ -21,7 +25,11 @@
   .nav-links li {
     background-color: blue;
     padding: 10px 15px;
-    border-radius: 5px;
+  }
+
+  .nav-links li:hover {
+    background-color: black;
+   
   }
   
   .nav-links a {
