[ADD] context api

--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -21,6 +21,9 @@
     display: flex;
     gap: 20px;
   }
+  .button {
+    background-color: #fff;
+  }
   
   .nav-links li {
     background-color: blue;
