--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: {isDarkMode ? 'black' : 'white'};
+  color: {isDarkMode ? 'black' : 'white'};
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
