--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: {isDarkMode ? 'black' : 'white'};
-  color: {isDarkMode ? 'black' : 'white'};
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.dark-mode {
+  --background-color: #333;
+  --text-color: #fff;
+}
+
+.light-mode {
+  --background-color: #fff;
+  --text-color: #333;
 }
 
 :root {
