--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -51,8 +51,7 @@
     left: 0;
     background-color: #333;
     width: 100%;
-    transition: transform 0.3s;
-    transform: translateY(-100%);
+    
   }
 
   .header.active {
@@ -66,6 +65,9 @@
 
   .nav-toggle.active {
     background-color: #333;
+  }
+  .nav-links.active {
+    display: block;
   }
 
   .nav-toggle {
