--- a/src/Components/Introduction/style.css
+++ b/src/Components/Introduction/style.css
@@ -4,6 +4,8 @@
     align-items: center;
     text-align: center;
     width: fit-content;
+    padding-top: 90px;
+    margin-top: 50px;
 
     padding: 80px;
 }
@@ -13,7 +15,7 @@
     width: fit-content;
     margin: auto;
     padding: 5px;
-    padding-top: 80px;
+    padding-top: 100px;
     font-size:smaller;
 
     }
