--- a/src/Components/MoviesList/style.css
+++ b/src/Components/MoviesList/style.css
@@ -9,13 +9,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: aqua; */
+  background-color: rgb(11, 11, 36);
   height: 40px;
-  position: fixed;
-  top: 30px;
-  left: 0;
-  right: 0;
-  z-index: auto;
+  padding: 10px;
+
+  width: fit-content;
+  margin: auto;
+  z-index: 5;
 
 }
 
