--- a/src/Components/Introduction/style.css
+++ b/src/Components/Introduction/style.css
@@ -7,7 +7,7 @@
     padding-top: 90px;
     margin-top: 50px;
 
-    padding: 80px;
+    padding: 30px;
 }
 
 @media screen and (max-width: 500px) {
@@ -17,6 +17,9 @@
     padding: 5px;
     padding-top: 100px;
     font-size:smaller;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     }
   }
