--- a/src/Components/Introduction/style.css
+++ b/src/Components/Introduction/style.css
@@ -7,17 +7,17 @@
     padding-top: 90px;
     margin-top: 50px;
 
-    padding: 30px;
+    padding: 80px;
 }
 
 @media screen and (max-width: 500px) {
     .introduction {
     width: fit-content;
     margin: auto;
-    padding: 5px;
-    padding-top: 100px;
+    padding: 20px;
+    padding-top: 120px;
     font-size:smaller;
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
 
